# tp2

./: .gitignore  .indent.pro  Makefile  Makefile.bcc  Makefile.in  Makefile.sco  README.md  autogen.sh  compiler.mk  configure  configure.ac
m4/: ax_check_curses.m4  ax_set_prefix.m4  ax_strict_cflags.m4
src/: game.c  game.h  main.c  terminal.c  terminal.h  ui.c  ui.h
